# Stereoscopic-Vision

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
boiler_plate/: CONTRIBUTING.md  OVERVIEW.md  README.md  requirements.txt  setup.sh
boiler_plate/src/stereo_bringup/: package.xml  setup.py
boiler_plate/src/stereo_bringup/launch/: stereo_pipeline_launch.py
boiler_plate/src/stereo_calibration/: package.xml  stereo_calibrate.py
boiler_plate/src/stereo_calibration/config/: stereo.yaml
boiler_plate/src/stereo_mapping/: package.xml
boiler_plate/src/stereo_mapping/nodes/: pointcloud_node.py
boiler_plate/src/stereo_perception/: package.xml  setup.py
boiler_plate/src/stereo_perception/nodes/: depth_node.py  disparity_node.py  rectification_node.py
